--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
     <main>
@@ -21,14 +23,22 @@
                 </div>
             </div>
             <div class="color">
-                <span class="green active">Green</span>
-                <span class="blue">Blue</span>
-                <span class="yellow">Yellow</span>
-                <span class="red">Red</span>
+                <div class="green active">
+                    <span>green</span>
+                </div>
+                <div class="blue">
+                    <span>blue</span>
+                </div>
+                <div class="yellow">
+                    <span>yellow</span>
+                </div>
+                <div class="red">
+                    <span>red</span>
+                </div>
             </div>
             <div class="size">
-                <span class="forty-two available">42</span>
-                <span class="forty-three">43</span>
+                <span class="forty-two active">42</span>
+                <span class="forty-three unavailable">43</span>
                 <span class="forty-four">44</span>
                 <span class="forty-five">45</span>
                 <span class="forty-six">46</span>
